--- a/FE/EEBook/src/app/components/client/checkout/checkout.component.html
+++ b/FE/EEBook/src/app/components/client/checkout/checkout.component.html
@@ -22,35 +22,35 @@
 <section class="checkout spad">
     <div class="container">
         <div class="checkout__form">
-            <h4>Billing Details</h4>
+            <h4>Thông tin giao hàng</h4>
             <form action="#">
                 <div class="row">
                     <div class="col-lg-8 col-md-6">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="checkout__input">
-                                    <p>Fist Name<span>*</span></p>
-                                    <input type="text" [(ngModel)]="orderForm.firstname" name="firstname">
+                                    <p>Họ và tên<span>*</span></p>
+                                    <input type="text" [(ngModel)]="orderForm.name" name="firstname">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="checkout__input">
-                                    <p>Last Name<span>*</span></p>
-                                    <input type="text" [(ngModel)]="orderForm.lastname" name="lastname">
+                                    <p>Số điện thoại<span>*</span></p>
+                                    <input type="text" [(ngModel)]="orderForm.phoneNumber" name="lastname">
                                 </div>
                             </div>
                         </div>
                         <div class="checkout__input">
-                            <p>Country<span>*</span></p>
-                            <input type="text" [(ngModel)]="orderForm.country" name="country">
+                            <p>Email<span>*</span></p>
+                            <input type="text" [(ngModel)]="orderForm.email" name="country">
                         </div>
                         <div class="checkout__input">
-                            <p>Address<span>*</span></p>
-                            <input type="text" placeholder="Street Address" [(ngModel)]="orderForm.address" name="address">
+                            <p>Quốc gia<span>*</span></p>
+                            <input type="text" placeholder="Street Address" [(ngModel)]="orderForm.country" name="address">
                         </div>
                         <div class="checkout__input">
-                            <p>Town/City<span>*</span></p>
-                            <input type="text" [(ngModel)]="orderForm.town" name="town">
+                            <p>City<span>*</span></p>
+                            <input type="text" [(ngModel)]="orderForm.city" name="town">
                         </div>
                         <div class="checkout__input">
                             <p>Country/State<span>*</span></p>
@@ -78,10 +78,11 @@
                             <label for="diff-acc">
                                 Ship to a different address?
                                 <input type="checkbox" id="diff-acc">
-                                <span class="checkmark"></span>
-                            </label>
-                        </div>
-                        <div class="checkout__input">
+                            </label>                                <span class="checkmark"></span>
+
+                        </div>                                <span class="checkmark"></span>
+
+                      <div class="checkout__input">
                             <p>Order notes<span>*</span></p>
                             <input type="text"
                                 placeholder="Notes about your order, e.g. special notes for delivery." [(ngModel)]="orderForm.note" name="note">
