--- a/FE/EEBook/src/assets/css/style.css
+++ b/FE/EEBook/src/assets/css/style.css
@@ -167,7 +167,7 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #7fad39;
+	background: #d9a031;
 	letter-spacing: 2px;
 }
 
@@ -178,7 +178,7 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #fd7e14;
+	background: #d9a031;
 	border: none;
 }
 
@@ -588,7 +588,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #fd7e14;
+	background: #d9a031 ;
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
