--- a/FE/EEBook/src/app/components/admin/dashboard/dashboard.component.html
+++ b/FE/EEBook/src/app/components/admin/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <fa-icon [icon]="faceLaugh"></fa-icon>
             </div>
-            <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+            <div class="sidebar-brand-text mx-3">EE Admin <sup>2</sup></div>
         </a>
 
         <!-- Divider -->
@@ -183,7 +183,7 @@
 
             </nav>
             <div class="container-fluid">
-                
+
                 <!-- <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                     <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
