--- a/FE/EEBook/src/app/components/admin/order/order.component.html
+++ b/FE/EEBook/src/app/components/admin/order/order.component.html
@@ -4,7 +4,7 @@
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
-                <h5 class="m-0">Manage Products</h5>
+                <h5 class="m-0">Quản lý đơn hàng</h5>
                 <span class="p-input-icon-left">
                     <i class="pi pi-search"></i>
                     <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')" placeholder="Tìm kiếm" />`
@@ -17,13 +17,11 @@
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
                 <th pSortableColumn="name">Customer <p-sortIcon field="name"></p-sortIcon></th>
-                <th pSortableColumn="country">Country<p-sortIcon field="country"></p-sortIcon></th>
-                <th pSortableColumn="address">Address <p-sortIcon field="address"></p-sortIcon></th>
                 <!-- <th pSortableColumn="town">Town/City <p-sortIcon field="town"></p-sortIcon></th>
                 <th pSortableColumn="state">Country/State<p-sortIcon field="state"></p-sortIcon></th> -->
                 <!-- <th pSortableColumn="postcode">Postcode/Zip <p-sortIcon field="postcode"></p-sortIcon></th> -->
                 <th pSortableColumn="phone">Phone <p-sortIcon field="phone"></p-sortIcon></th>
-                <th pSortableColumn="email">Email <p-sortIcon field="email"></p-sortIcon></th>
+              <th pSortableColumn="address">Address <p-sortIcon field="address"></p-sortIcon></th>
                 <th pSortableColumn="price">Total <p-sortIcon field="price"></p-sortIcon></th>
                 <th style="min-width:10rem">Status</th>
                 <th></th>
@@ -34,13 +32,11 @@
                 <td style="width: 4rem">
                     <p-tableCheckbox [value]="order"></p-tableCheckbox>
                 </td>
-                <td>{{order.firstname}} {{order.lastname}}</td>
-                <td>{{order.country}}</td>
-                <td>{{order.address}}</td>
-                <td>{{order.phone}}</td>
-                <td>{{order.email}}</td>
-                <td>{{order.totalPrice}}</td>
-                <td><button pButton type="button" label="Waiting For Delivery" class="p-button-success"></button></td>
+                <td>{{order.name}}</td>
+                <td>{{order.phoneNumber}}</td>
+                <td>{{order.address}} {{order.ward}} {{order.district}} {{order.city}} {{order.country}}</td>
+                <td>{{order.totalPrice| number:'1.0-0'}} đ</td>
+                <td><button pButton type="button" label="Đang giao hàng" class="p-button-success"></button></td>
             </tr>
         </ng-template>
     </p-table>
