--- a/FE/EEBook/src/app/components/client/blog-client/blog-client.component.html
+++ b/FE/EEBook/src/app/components/client/blog-client/blog-client.component.html
@@ -1,21 +1,5 @@
-<section class="breadcrumb-section set-bg" [ngStyle]="{backgroundImage:'url(assets/image/breadcrumb.jpg'}">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div class="breadcrumb__text">
-                    <h2>Blog</h2>
-                    <div class="breadcrumb__option">
-                        <a routerLink="/" >Blog</a>
-                        <span>Blog</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
-
-<section class="blog spad">
+<section class="blog spad" style="margin-top: -50px">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-5">
@@ -27,13 +11,13 @@
                         </form>
                     </div>
                     <div class="blog__sidebar__item">
-                        <h4>Tags</h4>
+                        <h4>Thẻ</h4>
                         <ul>
                             <li *ngFor="let tag of listTag"><a href="javascript:void(0)">{{tag.name}}</a></li>
                         </ul>
                     </div>
                     <div class="blog__sidebar__item">
-                        <h4>Recent News</h4>
+                        <h4>Tin tức gần đây</h4>
                         <div class="blog__sidebar__recent">
                             <a href="javascript:void(0)" routerLink="/blog/{{blog.id}}" class="blog__sidebar__recent__item" *ngFor="let blog of listBlogNewest">
                                 <div class="blog__sidebar__recent__item__pic">
