--- a/FE/EEBook/src/app/components/client/cart/cart.component.html
+++ b/FE/EEBook/src/app/components/client/cart/cart.component.html
@@ -18,18 +18,21 @@
     </div>
 </section>
 
-<section class="shoping-cart spad">
+<section class="shoping-cart spad" style="margin-top: -200px">
+  <thead>
+  </thead>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
+              <h4>GIỎ HÀNG ({{cartService.items.length}} sản phẩm)</h4>
                 <div class="shoping__cart__table">
                     <table>
                         <thead>
                             <tr>
-                                <th class="shoping__product">Products</th>
-                                <th>Price</th>
-                                <th>Quantity</th>
-                                <th>Total</th>
+                                <th class="shoping__product">Sản phẩm</th>
+                                <th>Giá</th>
+                                <th>Số lượng</th>
+                                <th>Thành tiền</th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -40,7 +43,7 @@
                                     <h5>{{product.name}}</h5>
                                 </td>
                                 <td class="shoping__cart__price">
-                                    {{product.price | currency}}
+                                    {{product.price | number:'1.0-0'}} đ
                                 </td>
                                 <td class="shoping__cart__quantity">
                                     <div class="quantity">
@@ -52,7 +55,7 @@
                                     </div>
                                 </td>
                                 <td class="shoping__cart__total">
-                                    {{product.subTotal | currency}}
+                                    {{product.subTotal | number:'1.0-0'}} đ
                                 </td>
                                 <td class="shoping__cart__item__close">
                                     <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-danger p-button-text" (click)="removeFromCart(product)"></button>
@@ -66,29 +69,30 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="shoping__cart__btns">
-                    <a href="javascript:void(0)" routerLink="/"class="primary-btn cart-btn">CONTINUE SHOPPING</a>
+                    <a href="javascript:void(0)" routerLink="/"class="primary-btn cart-btn">Tiếp tục mua</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="shoping__continue">
                     <div class="shoping__discount">
-                        <h5>Discount Codes</h5>
+                        <h5>Mã giảm giá</h5>
                         <form action="#">
-                            <input type="text" placeholder="Enter your coupon code">
-                            <button type="submit" class="site-btn">APPLY COUPON</button>
+                            <input type="text" placeholder="Nhập mã giảm giá">
+                            <button type="submit" class="site-btn">Áp dụng</button>
                         </form>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="shoping__checkout">
-                    <h5>Cart Total</h5>
-                    <ul>
-                        <li>Subtotal <span>{{cartService.totalPrice | currency}}</span></li>
-                        <li>Sale <span>- 0%</span></li>
-                        <li>Total <span>{{cartService.total | currency}}</span></li>
-                    </ul>
-                    <a href="javascript:void(0)" routerLink="/checkout" class="primary-btn">PROCEED TO CHECKOUT</a>
+                    <h5>Tổng giỏ hàng</h5>
+                  <ul>
+                    <li>Thành tiền tạm tính <span>{{cartService.totalPrice | number:'1.0-0'}} đ</span></li>
+                    <li>Giảm giá <span>- 0%</span></li>
+                    <li>Tổng tiền <span>{{cartService.total | number:'1.0-0'}} đ</span></li>
+                  </ul>
+
+                  <a href="javascript:void(0)" routerLink="/checkout" class="primary-btn">Mua ngay</a>
                 </div>
             </div>
         </div>
