--- a/FE/EEBook/src/app/components/client/home/home.component.css
+++ b/FE/EEBook/src/app/components/client/home/home.component.css
@@ -188,3 +188,9 @@ body{
   margin: 50px;
   padding: 10px;
 }
+
+.small-cat-btn {
+  font-size: 20px; /* Thay đổi kích thước phông chữ */
+  padding: 5px 10px; /* Thay đổi kích thước lề */
+}
+
