--- a/FE/EEBook/src/app/components/client/vnpay/vnpay.component.html
+++ b/FE/EEBook/src/app/components/client/vnpay/vnpay.component.html
@@ -21,7 +21,7 @@
 
             <div class="form-group">
               <label for="orderInfo">Thông tin đơn hàng:</label>
-              <input type="text" class="form-control" id="orderInfo" name="orderInfo" required [(ngModel)]="orderInfo" readonly #info="ngModel">
+              <input type="text" class="form-control" id="orderInfo" name="orderInfo" required [(ngModel)]="this.orderInfo" readonly #info="ngModel">
 
               <p class="error-message active" *ngIf="info.touched && !info.value || info.value===''">
                 <span style="color: red">Trường này không được để trống</span>
